--- a/.github/workflows/p2p-get-latest-image-prod.yaml
+++ b/.github/workflows/p2p-get-latest-image-prod.yaml
@@ -35,7 +35,7 @@ on:
 
 jobs:
   get-latest-version:
-    uses: ./.github/workflows/p2p-get-latest-image.yaml\
+    uses: ./.github/workflows/p2p-get-latest-image.yaml
     if: success() && (github.ref == inputs.main-branch )
     secrets:
       env_vars: ${{ secrets.env_vars }}
