--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -21,7 +21,7 @@ on:
       version-prefix:
         required: false
         type: string
-        defualt: 'v'
+        default: 'v'
       
 
 jobs:
