--- a/.github/workflows/p2p-workflow-extended-test.yaml
+++ b/.github/workflows/p2p-workflow-extended-test.yaml
@@ -35,7 +35,7 @@ on:
       version-prefix:
         required: false
         type: string
-        defualt: 'v'
+        default: 'v'
 
 env:
   REGION: ${{ inputs.region }} 
