Fix required field

--- a/.github/workflows/p2p-get-latest-image.yaml
+++ b/.github/workflows/p2p-get-latest-image.yaml
@@ -33,7 +33,7 @@ on:
         required: true
         type: string
       checkout-version:
-        required: true
+        required: false
         type: string
 
 
