Add condition on checkout for dry runs

--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -90,8 +90,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.checkout-version }}
-          fetch-tags: true
+          ref: ${{ inputs.dry-run == false && inputs.checkout-version || '' }}
+
 
       - name: Authenticate to Google Cloud (Source)
         id: auth-source
