--- a/.github/workflows/p2p-execute-command.yaml
+++ b/.github/workflows/p2p-execute-command.yaml
@@ -74,8 +74,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.checkout-version }}
-          fetch-tags: true
+          ref: ${{ inputs.dry-run == false && inputs.checkout-version || '' }}
 
       - name: Authenticate to Google Cloud
         id: auth
