--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -31,6 +31,9 @@ on:
         required: false
         type: string
         default: '.'
+      checkout-version:
+        required: false
+        type: string
 
 
 jobs:
@@ -83,8 +86,12 @@ jobs:
           yq -p=json -C <<EOT
           ${{ toJSON(env) }}
           EOT
+  
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.dry-run == false && inputs.checkout-version || '' }}
+
 
       - name: Authenticate to Google Cloud (Source)
         id: auth-source
