Add kube auth to promotions (#28)
* Add optional kubernetes config on the promotion steps

--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -13,6 +13,10 @@ on:
         required: false
         type: boolean
         default: false
+      connect-to-k8s:
+        required: false
+        type: boolean
+        default: false
       source_matrix:
         required: true
         type: string
@@ -27,6 +31,10 @@ on:
         required: false
         type: string
         default: europe-west2
+      zone:
+        required: false
+        type: string
+        default: europe-west2-a
       working-directory:
         required: false
         type: string
@@ -116,8 +124,51 @@ jobs:
           token_format: access_token
           access_token_lifetime: 600s
 
+      - name: Setup NumPy
+        id: setup-numpy
+        if: inputs.dry-run == false && inputs.connect-to-k8s == true
+        shell: bash
+        # https://cloud.google.com/iap/docs/using-tcp-forwarding#increasing_the_tcp_upload_bandwidth
+        run: $(gcloud info --format="value(basic.python_location)") -m pip install numpy
+
+      - name: Setup Google Cloud SDK
+        id: setup-gcloud
+        if: inputs.dry-run == false && inputs.connect-to-k8s == true
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          install_components: beta,gke-gcloud-auth-plugin
+          
+      - name: Setup kubeconfig
+        id: setup-kubeconfig
+        if: inputs.dry-run == false && inputs.connect-to-k8s == true
+        env:
+          CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE: ${{ steps.auth-source.outputs.credentials_file_path }}
+        shell: bash
+        run: |
+          gcloud container clusters get-credentials --project $PROJECT_ID --zone ${{ inputs.region }} --internal-ip ${{ env.DPLATFORM }}
+          kubectl config set clusters.gke_${{ env.PROJECT_ID }}_${{ inputs.region }}_${{ env.DPLATFORM }}.proxy-url http://localhost:57755
+
+      - name: Decode environment variables
+        run: |
+          for i in $env_vars; do
+            i=$(echo $i | sed 's/=.*//g')=$(echo ${i#*=})
+            echo ::add-mask::${i#*=}
+            printf '%s\n' $i >> $GITHUB_ENV
+          done
+
+      - name: Tunnel
+        id: start-tunnel
+        if: inputs.dry-run == false && inputs.connect-to-k8s == true
+        env:
+          CLOUDSDK_AUTH_CREDENTIAL_FILE_OVERRIDE: ${{ steps.auth-source.outputs.credentials_file_path }}
+        run: |
+          nohup sh -c "while true ; do gcloud compute start-iap-tunnel ${{ env.DPLATFORM }}-bastion 3128 --local-host-port localhost:57755 --project ${{ env.PROJECT_ID }}  --zone ${{ inputs.zone }}  ; done" &
+          sleep 4
+          kubectl cluster-info
+
       - name: Promote
         id: run-promotion
+        if: inputs.dry-run == false
         working-directory: ${{ inputs.working-directory }}
         env:
           SOURCE_AUTH_OVERRIDE: ${{ steps.auth-source.outputs.credentials_file_path }}
@@ -125,5 +176,5 @@ jobs:
           DEST_AUTH_OVERRIDE: ${{ steps.auth-dest.outputs.credentials_file_path }}
           DEST_ACCESS_TOKEN: ${{ steps.auth-dest.outputs.access_token }}
         run: |
-            make p2p-promote-to-${{ inputs.promotion-stage }}
+          make p2p-promote-to-${{ inputs.promotion-stage }}
 
