--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -1,4 +1,4 @@
-name: CD
+name: Increment Version
 
 on:
   repository_dispatch:
@@ -11,7 +11,9 @@ jobs:
     uses: ./.github/workflows/internal-version.yaml
     secrets:
       git-token: ${{ secrets.GITHUB_TOKEN }}
+
   fail:
+    runs-on: ubuntu-latest
     if: github.event.action == 'failure'
     steps:
       - name: Exit with error
