Added missing env variable so the secrets are available in the makefile target

--- a/.github/workflows/p2p-promote-image.yaml
+++ b/.github/workflows/p2p-promote-image.yaml
@@ -69,6 +69,7 @@ jobs:
     needs: [lookup]
     environment: ${{ inputs.dest_github_env }}
     env:
+      env_vars: ${{ secrets.env_vars }}
       BASE_DOMAIN: ${{ vars.BASE_DOMAIN }}
       DEST_GITHUB_ENV: ${{ inputs.dest_github_env }}
       DPLATFORM: ${{ vars.DPLATFORM }}
