Fix bug where application prefix had to be single char

--- a/.github/workflows/internal-ci.yaml
+++ b/.github/workflows/internal-ci.yaml
@@ -28,6 +28,7 @@ jobs:
       git-token: ${{ secrets.GITHUB_TOKEN }}
     with:
       dry-run: true
+      version-prefix: app-tag
 
   test_execute_command:
     needs: [test_version]
