--- a/.github/workflows/p2p-version.yaml
+++ b/.github/workflows/p2p-version.yaml
@@ -84,6 +84,7 @@ jobs:
       shell: bash
       run: |
         set -x
+        env
         if [ "${{ inputs.main-branch }}" = "${{ github.ref }}" ]; then
           echo "On main branch, setting next version"
           echo "version=${{ steps.semvers.outputs.patch }}" >> "$GITHUB_OUTPUT"
